opam-version: "1.2"
version: "1.1.4"
maintainer: "contact@ocamlpro.com"
tags: [ "org:ocamlpro" "gui" "teaching" "toplevel" ]
authors: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
homepage: "http://www.typerex.org/ocaml-top.html"
dev-repo: "https://github.com/OCamlPro/ocaml-top.git"
bug-reports: "https://github.com/OCamlPro/ocaml-top/issues"
license: "GPL-3"
build: ["jbuilder" "build" "-p" name]
depends: [
  "jbuilder"
  "ocp-pp"
  "lablgtk" {>= "2.16.0"}
  "conf-gtksourceview" {= "2"}
  "ocp-indent" {>= "1.4.0"}
  "ocp-index" {>= "1.0.0"}
]
