opam-version: "2.0"
version: "1.1.5"
maintainer: "contact@ocamlpro.com"
authors: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
license: "GPL-3"
tags: ["org:ocamlpro" "gui" "teaching" "toplevel"]
homepage: "http://www.typerex.org/ocaml-top.html"
bug-reports: "https://github.com/OCamlPro/ocaml-top/issues"
depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {>= "1.10"}
  "ocp-pp"
  "lablgtk" {>= "2.16.0"}
  "conf-gtksourceview" {= "2"}
  "ocp-indent" {>= "1.4.0"}
  "ocp-index" {>= "1.0.0"}
]
build: ["dune" "build" "-p" name]
dev-repo: "git+https://github.com/OCamlPro/ocaml-top.git"
url {
  src: "git+file:///home/lg/ocamlpro/ocaml-top#master"
}
