(library
 (name sigint_win)
 (enabled_if (= %{os_type} Win32))
 (c_names sigint_win)
 (modules))

(library
 (name sigint_unix)
 (enabled_if (<> %{os_type} Win32))
 (c_names sigint_unix)
 (modules))

(rule
 (targets test)
 (action (with-stdout-to test (echo %{os_type}))))

(library
 (name top)
 (modules tools cfg top)
 (wrapped false)
 (libraries unix threads str
   (select sigint from (sigint_win -> top)
                       (sigint_unix -> top))))

;; Is there a better way to do this ? I just want to add '-ccopt -lpthread'
;; on Windows...
(library
 (name dummy_link_flag)
 (modules )
 (wrapped false)
 (enabled_if (= %{os_type} Win32))
 (flags -ccopt -lpthread))

(executable
 (name main)
 (modules ocamlBuffer completion topUi gui main)
 (public_name ocaml-top)
 (libraries top threads ocp-indent.lib ocp-index.lib lablgtk3 lablgtk3-sourceview3
   (select dummy from (dummy_link_flag -> dummy_link_flag) (-> dummy_link_flag))))
